tests/NormalTests/paczka1/fuzzy1/14903990.err
Error in line 6: H93v6ST A72 22,30
Error in line 9: A5 A72 75,5
Error in line 14: A5 A5 51,2
Error in line 15: A5 A225 17,6
Error in line 4: vHiMZAMrr A5 10,1
Error in line 20: A5 A225 76,7
Error in line 17: vHiMZAMrr S780 68,0
Error in line 36: vHiMZAMrr A5 97,9
Error in line 32: H93v6ST A72 202,4
